----------------------------
testrepository release notes
----------------------------

NEXT (In development)
---------------------

IMPROVEMENTS
~~~~~~~~~~~~

* New subcommand 'failing' added.

* The command 'last' will no longer error on a new repository.